kubernetes/k8s-mirakc-epgstation/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/name: epgstation-nginx
    app.kubernetes.io/part-of: epgstation
  name: epgstation-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: epgstation-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: epgstation-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine-slim
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-pid
              mountPath: /var/run
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          securityContext:
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /api/version
              port: 80
              httpHeaders:
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: nginx-cache
          emptyDir:
        - name: nginx-pid
          emptyDir:
        - name: nginx-config
          configMap:
            name: epgstation-nginx
